// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditableListWidget/> should render a list with some tags in it 1`] = `
<div>
  <div
    id="editable-list-2-tooltip-target"
  >
    <div
      class="MultiSelectField"
    >
      <div
        class="container compact"
      >
        <span
          class="tag compact badge badge-secondary"
        >
          <span
            class="tagText"
          >
            cool
          </span>
          <i
            class="material-icons ml-1 closeIcon"
          >
            close
          </i>
        </span>
        <span
          class="tag compact badge badge-secondary"
        >
          <span
            class="tagText"
          >
            super
          </span>
          <i
            class="material-icons ml-1 closeIcon"
          >
            close
          </i>
        </span>
        <div
          class="inputContainer multiSelectOptionField-dropdown compact"
        >
          <div
            class="dropdown"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class=""
              data-toggle="dropdown"
            >
              <input
                autocomplete="off"
                class="input compact"
                placeholder="Add tags..."
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="options dropdown-menu"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-header"
                tabindex="-1"
              >
                No result
              </h6>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EditableListWidget/> should render an empty list because no options has been given 1`] = `
<div>
  <div
    id="editable-list-1-tooltip-target"
  >
    <div
      class="MultiSelectField"
    >
      <div
        class="container compact"
      >
        <div
          class="inputContainer multiSelectOptionField-dropdown compact"
        >
          <div
            class="dropdown"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class=""
              data-toggle="dropdown"
            >
              <input
                autocomplete="off"
                class="input compact"
                placeholder="Add tags..."
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="options dropdown-menu"
              role="menu"
              tabindex="-1"
            >
              <h6
                class="dropdown-header"
                tabindex="-1"
              >
                No result
              </h6>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
